# automating-research-with-agentic-llms

./: .gitignore  README.md  pyrightconfig.json
light-pipeline/: .gitignore  README.md  _1_idea_gen.py  _2_idea_filter.py  _3_data_exec.py  _4_method_exec.py  _5_eval_exec.py  _6_result_present.py  log.py  openai_utils.py  pipeline_config.yaml  pyproject.toml  run.py  test_cc.py  truncate_json.py  xml_escape_utils.py
light-pipeline/auto_claudec_sdk/: __init__.py  config.py  logging.py  models.py  msg_parse.py  retry.py  streaming.py
light-pipeline/prompts/: _1_IdeaGen_Prompt.py  _2_IdeaFilter_Prompt.py  _2_IdeaFilter_SysPrompt.py  _3_MAS_DataExec_Prompt.py  _3_MAS_DataExec_SysPrompt.py  _4_MAS_MethodExec_Prompt.py  _4_MAS_MethodExec_SysPrompt.py  _5_MAS_EvalExec_Prompt.py  _5_MAS_EvalExec_SysPrompt.py  _6_MAS_ResultPresent_Prompt.py  _6_MAS_ResultPresent_SysPrompt.py  __init__.py
light-pipeline/prompts/MAS/: data_out_format.json  data_scout.py  eval_examples.py  eval_out_format.json  evaluate_docs.txt  handbook.txt  mas_examples.py  method_out_format.json  mirascope_docs.txt
light-pipeline/prompts/MAS/data_scout_out/20250916_164002/: data_gsm8k.json  data_humaneval.json
light-pipeline/runs/sonnet4_full/idea_exec/: module_result.json
light-pipeline/runs/sonnet4_full/idea_filter/: module_result.json
light-pipeline/runs/sonnet4_full/idea_gen/: module_result.json
light-pipeline/runs/sonnet4_full/idea_plan/: module_result.json
light-pipeline/runs/sonnet4_full/model_workspace/: IdeaExec_final_out.txt  IdeaExec_history.txt  IdeaFilter_final_out.txt  IdeaFilter_history.txt  IdeaGen_final_out.txt  IdeaPlan_final_out.txt  IdeaPlan_history.txt  cite_challenge_paper.aux  cite_challenge_paper.out  cite_challenge_paper.tex  generate_figures.py  neurips_paper.tex  pyproject.toml  run_experiments.py
light-pipeline/runs/sonnet4_full/model_workspace/config/: config.yaml
light-pipeline/runs/sonnet4_full/model_workspace/data/: claims.db
light-pipeline/runs/sonnet4_full/model_workspace/figures/: detailed_metrics_table.tex  experiment_summary_table.tex
light-pipeline/runs/sonnet4_full/model_workspace/results/: experiment_results_20250810_234456.json  experiment_summary_20250810_234456.txt
light-pipeline/runs/sonnet4_full/model_workspace/src/agents/: agent_manager.py  answering_agent.py  challenger_agent.py  response_processor.py
light-pipeline/runs/sonnet4_full/model_workspace/src/config/: config.yaml  (+1 more)
(+36 files in other folders)
